external-crates/move/crates/move-compiler/tests/move_check/parser/struct_type_missing_angle.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_type_missing_angle.move:3:37
  │
3 │     struct S<phantom T1, phantom T2 { }
  │             -                       ^ Expected '>'
  │             │                        
  │             To match this '<'
